@@ -749,22 +749,34 @@ attributes may be incorporated in the text (see label()).</font></td>
 
 <tr>
 <td>
+<center><a NAME="DrawableTextAntialias"></a><font size=-1>DrawableTextAntialias</font></center>
+</td>
+
+<td><font size=-1>bool flag_</font></td>
+
+<td><font size=-1>Antialias while drawing text (default true). The main
+reason to disable text antialiasing is to avoid adding new colors to the
+image.</font></td>
+</tr>
+
+<tr>
+<td>
+<center><a NAME="DrawableTextUnderColor"></a><font size=-1>DrawableTextUnderColor</font></center>
+</td>
+
+<td><font size=-1>const Color &amp;color_</font></td>
+
+<td><font size=-1>Draw a box under rendered text using the specified color.</font></td>
+</tr>
+
+<tr>
+<td>
 <center><a NAME="DrawableTranslation"></a><font size=-1>DrawableTranslation</font></center>
 </td>
 
 <td><font size=-1>double x_, double y_</font></td>
 
 <td><font size=-1>Apply coordinate translation (set new coordinate origin).</font></td>
-</tr>
-
-<tr>
-<td>
-<center><a NAME="DrawableTextAntialias"></a><font size=-1>DrawableTextAntialias</font></center>
-</td>
-
-<td><font size=-1>bool flag_</font></td>
-
-<td><font size=-1>Antialias while drawing text.</font></td>
 </tr>
 
 <tr>
